# code-vr

./: .gitignore  .gitmodules  .travis.yml  license.md  readme.md
codevr/: Cargo.toml  build.rs
codevr/src/: main.rs
codevr/src/app/: mod.rs  player.rs
codevr/src/config/: graphics.rs  input.rs  mod.rs  sound.rs  window.rs
codevr/src/engine/: actor.rs  events.rs  mod.rs
codevr/src/engine/config/: mod.rs
codevr/src/engine/input/: mod.rs
codevr/src/engine/renderer/: mod.rs
codevr/src/engine/renderer/text/: mod.rs
codevr/src/renderer/: mod.rs
codevr/src/renderer/text/: mod.rs
codevr/src/renderer/text/shaders/: font.frag.glsl  text_fs.glsl  text_vs.glsl
codevr/src/tests/: mod.rs
docs/images/: source-data-flow.ai
docs/images/brand/: logo.ai
engine/: Cargo.toml  build.rs
engine/src/: actor.rs  lib.rs
engine/src/config/: graphics.rs  input.rs  mod.rs  sound.rs
engine/src/core/: actor.rs  engine.rs  engine_state.rs  mod.rs  scene.rs
engine/src/input/: events.rs  mod.rs
engine/src/renderer/: mod.rs
engine/src/renderer/gfx/: camera.rs  material.rs  mesh.rs  mod.rs  node.rs  render.rs
engine/src/renderer/gfx/text/: mod.rs
engine/src/renderer/gfx/text/shaders/: text_fs.glsl  text_vs.glsl
engine/src/renderer/gfx/vulkan/: camera.rs
engine/src/renderer/vulkan/: camera.rs  material.rs  mesh.rs  mod.rs  node.rs
languages/: file1.py
languages/client/: Cargo.toml
languages/client/src/: main.rs
languages/files/: file1.py  file2.py  test.py
languages/parser/: Cargo.toml
languages/parser/src/: main.rs
languages/python/: export.py  file1.json  parse.py  server.py  server2.py  server3.py
(+6 files in other folders)
