[package]
name = "vr-programming"
version = "0.1.0"
authors = ["Alain Galvan <hi@alain.xyz>"]
build = "build.rs"

[dependencies]
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
vulkano = "0.3.2"
vulkano-win = "0.3.2"
winit = "0.6.3"
openvr = "0.1.1"

[build-dependencies]
vk-sys = "^0.2.2"
vulkano-shaders = "0.3.2"