[package]
name = "code-vr"
version = "0.1.0"
authors = ["Alain Galvan <hi@alain.xyz>"]
build = "build.rs"

[dependencies]
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
vulkano = "0.3.2"
vulkano-win = "0.3.2"
winit = "0.5.2"
openvr = "0.1.1"
libloading = "0.3.4"

[build-dependencies]
vk-sys = "^0.2.2"
vulkano-shaders = "0.3.2"
curl = "0.4.6"