[package]
name = "engine"
version = "0.1.0"
authors = ["Alain Galvan <hi@alain.xyz>"]
build = "build.rs"

[dependencies]
cgmath = "0.14.1"
image = "0.13.0"
libloading = "0.3.4"
openvr = "0.1.1"
serde = "1.0.1"
serde_derive = "1.0.6"
serde_json = "1.0.2"
vulkano = "0.4.0"
vulkano-win = "0.4.0"
vulkano-shader-derive = "0.4.0"
winit = "0.6.4"

[build-dependencies]
curl = "0.4.6"
vk-sys = "^0.2.3"
vulkano-shaders = "0.4.0"